--- a/src/app/venueadmin/parentadminview/venueuserprofile/venueuserprofile.component.scss
+++ b/src/app/venueadmin/parentadminview/venueuserprofile/venueuserprofile.component.scss
@@ -6,3 +6,7 @@
   height: 250px;
 
 }
+
+.pictureplaceholder{
+  background-image: url(../../../../assets/images/profilepictureplaceholder/PersonPlaceholder.png);
+}
