--- a/src/app/mainroot/roompage/roompage.component.html
+++ b/src/app/mainroot/roompage/roompage.component.html
@@ -3,35 +3,46 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <slideshow
+      <slideshow *ngIf="!fullbuyoutroomactive"
         class="card-container-img"
         [showArrows]="true"
         [imageUrls]="room.roomimage_set"
         [height]="roomheight">
       </slideshow>
+      <slideshow *ngIf="fullbuyoutroomactive"
+         class="card-container-img"
+         [showArrows]="true"
+         [imageUrls]="venue.venueimage_set"
+         [height]="roomheight">
+      </slideshow>
     </div>
   </div>
   <div id="RoomMain" class="Section">
     <div class="SecHeadunderline">
-      {{ venue.name }}
+      <a [routerLink]="['/venue',venue.name]">{{ venue.name }}</a>
     </div>
     <div class="FirstHead">
-      <div class="span-style">
+      <div *ngIf="!fullbuyoutroomactive" class="span-style">
         {{ roomname }}
       </div>
+      <div *ngIf="fullbuyoutroomactive" class="span-style">
+        Full Buyout
+      </div>
       <div class="span-style" *ngIf= "room.privateroom == true">
-        Private
+        &nbsp; Private
       </div>
 
       <div class="span-style" *ngIf= "room.semiprivateroom == true">
-        Semi-Private
+        &nbsp; Semi-Private
       </div>
     </div>
 
     <div class="SecHead">
       <div>
-        <div id="Seat" class="span-style"> {{ room.seatedcapacity }} seated </div>
-        <div id="Stand" class="span-style">{{ room.standingcapacity }} standing </div>
+        <div *ngIf="!fullbuyoutroomactive" id="Seat" class="span-style"> {{ room.seatedcapacity }} seated </div>
+        <div *ngIf="fullbuyoutroomactive" id="Seat" class="span-style"> {{ venue.fullbuyoutseatedcapacity }} seated </div>
+        <div *ngIf="!fullbuyoutroomactive" id="Stand" class="span-style"> &nbsp; {{ room.standingcapacity }} standing </div>
+        <div *ngIf="fullbuyoutroomactive" id="Stand" class="span-style"> &nbsp; {{ venue.fullbuyoutstandingcapactiy }} standing </div>
       </div>
       <a class="button button__primary float-right" (click)="open(createProp)">Add RFP</a>
     </div>
@@ -39,35 +50,44 @@
 
   <div id="RoomDes" class="Section">
     <div class="SecHead">Description</div>
-    <p>{{ venue.description }}</p>
+    <p *ngIf="!fullbuyoutroomactive">{{ room.description }}</p>
+    <p *ngIf="fullbuyoutroomactive">{{venue.fullbuyoutdescription}}</p>
   </div>
 
   <div id="AmentityInfo" class="Section">
     <div class="SecHead">Amenities</div>
     <div class="row">
       <div class="col-md-3 col-6">
-        <p [ngStyle]="{'color' : room.surroundsoundamenity === true ? 'black': 'gray' }">Surround Sound</p>
+        <p *ngIf="!fullbuyoutroomactive" [ngStyle]="{'color' : room.surroundsoundamenity === true ? 'black': 'gray' }">Surround Sound</p>
+        <p *ngIf="fullbuyoutroomactive" [ngStyle]="{'color' : venue.fullbuyoutsurrondsoundamenity === true ? 'black': 'gray' }">Surround Sound</p>
       </div>
       <div class="col-md-3 col-6">
-        <p [ngStyle]="{'color' : room.classroomamenity === true ? 'black': 'gray' }">Classroom</p>
+        <p *ngIf="!fullbuyoutroomactive" [ngStyle]="{'color' : room.classroomamenity === true ? 'black': 'gray' }">Classroom</p>
+        <p *ngIf="fullbuyoutroomactive" [ngStyle]="{'color' : venue.classroomamenity === true ? 'black': 'gray' }">Classroom</p>
       </div>
       <div class="col-md-3 col-6">
-        <p [ngStyle]="{'color' : room.stageamenity === true ? 'black': 'gray' }">Stage</p>
+        <p *ngIf="!fullbuyoutroomactive" [ngStyle]="{'color' : room.stageamenity === true ? 'black': 'gray' }">Stage</p>
+        <p *ngIf="fullbuyoutroomactive" [ngStyle]="{'color' : venue.fullbuyoutstageamenity === true ? 'black': 'gray' }">Stage</p>
       </div>
       <div class="col-md-3 col-6">
-        <p [ngStyle]="{'color' : room.televisionamenity === true ? 'black': 'gray' }">Television</p>
+        <p *ngIf="!fullbuyoutroomactive" [ngStyle]="{'color' : room.televisionamenity === true ? 'black': 'gray' }">Television</p>
+        <p *ngIf="fullbuyoutroomactive" [ngStyle]="{'color' : venue.fullbuyouttelevisionamenity === true ? 'black': 'gray' }">Television</p>
       </div>
       <div class="col-md-3 col-6">
-        <p [ngStyle]="{'color' : room.screenprojectoramenity === true ? 'black': 'gray' }">Screen + Projector</p>
+        <p *ngIf="!fullbuyoutroomactive" [ngStyle]="{'color' : room.screenprojectoramenity === true ? 'black': 'gray' }">Screen + Projector</p>
+        <p *ngIf="fullbuyoutroomactive" [ngStyle]="{'color' : venue.fullbuyoutscreenprojectoramenity === true ? 'black': 'gray' }">Screen + Projector</p>
       </div>
       <div class="col-md-3 col-6">
-        <p [ngStyle]="{'color' : room.naturallightamenity === true ? 'black': 'gray' }">Natural Light</p>
+        <p *ngIf="!fullbuyoutroomactive" [ngStyle]="{'color' : room.naturallightamenity === true ? 'black': 'gray' }">Natural Light</p>
+        <p *ngIf="fullbuyoutroomactive" [ngStyle]="{'color' : venue.fullbuyoutnaturallightamenity === true ? 'black': 'gray' }">Natural Light</p>
       </div>
       <div class="col-md-3 col-6">
-        <p [ngStyle]="{'color' : room.wifiamenity === true ? 'black': 'gray' }">WiFi</p>
+        <p *ngIf="!fullbuyoutroomactive" [ngStyle]="{'color' : room.wifiamenity === true ? 'black': 'gray' }">WiFi</p>
+        <p *ngIf="fullbuyoutroomactive" [ngStyle]="{'color' : venue.fullbuyoutwifiamenity === true ? 'black': 'gray' }">WiFi</p>
       </div>
       <div class="col-md-3 col-6">
-        <p [ngStyle]="{'color' : room.wheelchairamenity === true ? 'black': 'gray' }">Accessible</p>
+        <p *ngIf="!fullbuyoutroomactive" [ngStyle]="{'color' : room.wheelchairamenity === true ? 'black': 'gray' }"> Wheelchair Accessible</p>
+        <p *ngIf="fullbuyoutroomactive" [ngStyle]="{'color' : venue.fullbuyoutwheelchairaccessibleamenity === true ? 'black': 'gray' }"> Wheelchair Accessible</p>
       </div>
     </div>
   </div>
@@ -76,37 +96,69 @@
     <div class="SecHead">Capacities</div>
     <div class="row">
       <div class="col-md-3 col-6">
-        <p [ngStyle]="{'color' : room.cocktailstandingseatingoption === true ? 'black': 'gray' }">Cocktail / Standing</p>
+        <p *ngIf="!fullbuyoutroomactive" [ngStyle]="{'color' : room.cocktailstandingseatingoption === true ? 'black': 'gray' }">Cocktail / Standing</p>
+        <p *ngIf="fullbuyoutroomactive" [ngStyle]="{'color' : venue.fullbuyoutcocktailstandingseatingoption === true ? 'black': 'gray' }">Cocktail / Standing</p>
       </div>
       <div class="col-md-3 col-6">
-        <p [ngStyle]="{'color' : room.classroomseatingoption === true ? 'black': 'gray' }">Classroom</p>
+        <p *ngIf="!fullbuyoutroomactive" [ngStyle]="{'color' : room.classroomseatingoption === true ? 'black': 'gray' }">Classroom</p>
+        <p *ngIf="fullbuyoutroomactive" [ngStyle]="{'color' : venue.fullbuyoutclassroomseatingoption === true ? 'black': 'gray' }">Classroom</p>
       </div>
       <div class="col-md-3 col-6">
-        <p [ngStyle]="{'color' : room.ushapeseatingoption === true ? 'black': 'gray' }">U-Shape</p>
+        <p *ngIf="!fullbuyoutroomactive" [ngStyle]="{'color' : room.ushapeseatingoption === true ? 'black': 'gray' }">U-Shape</p>
+        <p *ngIf="fullbuyoutroomactive" [ngStyle]="{'color' : venue.fullbuyoutushapeseatingoption === true ? 'black': 'gray' }">U-Shape</p>
       </div>
       <div class="col-md-3 col-6">
-        <p [ngStyle]="{'color' : room.sixtyroundseatingoption === true ? 'black': 'gray' }">60' Rounds</p>
+        <p *ngIf="!fullbuyoutroomactive" [ngStyle]="{'color' : room.sixtyroundseatingoption === true ? 'black': 'gray' }">60" Rounds</p>
+        <p *ngIf="fullbuyoutroomactive" [ngStyle]="{'color' : venue.fullbuyoutsixtyroundseatingoption === true ? 'black': 'gray' }">60" Rounds</p>
       </div>
       <div class="col-md-3 col-6">
-        <p [ngStyle]="{'color' : room.seventy2roundseatingoption === true ? 'black': 'gray' }">72' Rounds</p>
+        <p *ngIf="!fullbuyoutroomactive" [ngStyle]="{'color' : room.seventytworoundseatingoption === true ? 'black': 'gray' }">72" Rounds</p>
+        <p *ngIf="fullbuyoutroomactive" [ngStyle]="{'color' : venue.fullbuyoutseventytworoundseatingoption === true ? 'black': 'gray' }">72" Rounds</p>
       </div>
       <div class="col-md-3 col-6">
-        <p [ngStyle]="{'color' : room.boardroomseatingoption === true ? 'black': 'gray' }">Boardroom</p>
+        <p *ngIf="!fullbuyoutroomactive" [ngStyle]="{'color' : room.boardroomseatingoption === true ? 'black': 'gray' }">Boardroom</p>
+        <p *ngIf="fullbuyoutroomactive" [ngStyle]="{'color' : venue.fullbuyoutboardroomseatingoption === true ? 'black': 'gray' }">Boardroom</p>
       </div>
       <div class="col-md-3 col-6">
-        <p [ngStyle]="{'color' : room.theaterseatingoption === true ? 'black': 'gray' }">Theater</p>
+        <p *ngIf="!fullbuyoutroomactive" [ngStyle]="{'color' : room.theaterseatingoption === true ? 'black': 'gray' }">Theater</p>
+        <p *ngIf="fullbuyoutroomactive" [ngStyle]="{'color' : venue.fullbuyouttheaterseatingoption === true ? 'black': 'gray' }">Theater</p>
       </div>
       <div class="col-md-3 col-6">
-        <p [ngStyle]="{'color' : room.hallowsquareseatingoption === true ? 'black': 'gray' }">Hallow Square</p>
+        <p *ngIf="!fullbuyoutroomactive" [ngStyle]="{'color' : room.hallowsquareseatingoption === true ? 'black': 'gray' }">Hallow Square</p>
+        <p *ngIf="fullbuyoutroomactive" [ngStyle]="{'color' : venue.fullbuyouthallowsquareseatingoption === true ? 'black': 'gray' }">Hallow Square</p>
       </div>
     </div>
   </div>
 
   <div id="OtherRooms" class="Section">
     <div class="SecHead">View More Rooms</div>
+    <div class="row" *ngIf="!fullbuyoutroomactive && venue.fullbuyoutonline">
+      <div class="col-sm-12 col-md-6 col-lg-4 pb-4">
+        <div class="card-container">
+          <div class="card-container-img">
+            <slideshow
+              [showArrows]="true"
+              [imageUrls]="venue.venueimage_set">
+            </slideshow>
+          </div>
+
+          <div class="card-container-information" style="cursor: pointer" [routerLink]="['/venue',venue.name,'fullbuyout']">
+            <div class="card-container-information__main">
+              Full Buyout
+            </div>
+
+            <p class="card-container-information__sub">
+              <span id="seat-number" class="card-container-information__sub--price">{{ venue.fullbuyoutseatedcapacity }} Seated</span>
+              <span id="stand-number" class="card-container-information__sub--room">{{ venue.fullbuyoutstandingcapactiy }} Standing</span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="row" *ngIf = "venue.room_set.length > 0">
-      <div class="col-sm-12 col-md-6 col-lg-4 pb-4" *ngFor="let r of venue.room_set">
-        <div *ngIf="r.pk != room.pk " class="card-container">
+      <div class="col-sm-12 col-md-6 col-lg-4 pb-4" *ngFor="let r of otherrooms">
+        <div class="card-container">
           <div class="card-container-img">
             <slideshow
               [showArrows]="true"
@@ -114,7 +166,7 @@
             </slideshow>
           </div>
 
-          <div class="card-container-information">
+          <div (click)="ngOnInit()" style="cursor: pointer;" class="card-container-information" [routerLink]="['/venue',venue.name,r.name]">
             <div class="card-container-information__main">
               {{ r.name }}
             </div>
