--- a/src/app/venueadmin/parentadminview/venueadminparentview/venueadminroomroot/venueroomadminpage/venueroomadminpage.component.scss
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venueadminroomroot/venueroomadminpage/venueroomadminpage.component.scss
@@ -74,13 +74,13 @@ textarea {
 }
 
 .onlinestatus{
-  color: white;
-  background-color: green;
+  color: green;
+  font-style: italic;
 }
 
 .offlinestatus{
-  color: white;
-  background-color: red;
+  color: red;
+  font-style: italic;
 }
 
 input, textarea{
