--- a/src/app/venueadmin/parentadminview/venueadminparentview/pagemixins/tabandtitleview/tabandtitleview.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/pagemixins/tabandtitleview/tabandtitleview.component.html
@@ -4,8 +4,8 @@
   </button>
   Changes Saved!
 </div>
-<div *ngIf="!onroompage" id="titlerow" class=""> <!--name row-->
-  <div class="venuetitle">
+<div *ngIf="!onroompage" id="titlerow" class="row"> <!--name row-->
+  <div class="venuetitle col-auto">
     <h4 *ngIf="!activateedittitle"><strong>{{venuename}}</strong></h4>
     <form *ngIf="activateedittitle" (ngSubmit)="editvenuename()" #venuenameform="ngForm">
       <label for="venuenameinput">Edit Title</label>
@@ -23,6 +23,10 @@
   <div class="">
     <a *ngIf="suitsadmin && !activateedittitle" (click)="showedittitle()" class="settingslink"><h4>Edit</h4></a>
   </div>
+  <div class="col-auto">
+    <a style="cursor: pointer" [href]="domain" target="_blank"><button *ngIf="!deleteconfrimshow && !deleterequestshow" class=" btn previewsubmitbuttons" id="previewbutton">Preview Venue</button></a>
+  </div>
+
 
   <div class="row">
     <div class="col-3 text-center">
@@ -34,17 +38,14 @@
       </h5>
     </div>
     <div *ngIf="suitsadmin" class="col-2">
-      <button (click)="deactivatevenue()" *ngIf="venueobject.online && !deleteconfrimshow && !deleterequestshow" id="deactivatebutton">Hide Venue</button>
-      <button (click)="activatevenue()" *ngIf="!venueobject.online && !deleteconfrimshow && !deleterequestshow" class="btn-success">Push Public</button>
+      <button class="btn" (click)="deactivatevenue()" *ngIf="venueobject.online && !deleteconfrimshow && !deleterequestshow" id="deactivatebutton">Hide Venue</button>
+      <button (click)="activatevenue()" *ngIf="!venueobject.online && !deleteconfrimshow && !deleterequestshow" class="btn btn-success">Push Public</button>
     </div>
     <div *ngIf="!suitsadmin" class="col-auto">
       <h5>Please email or call us to change the status of your venue</h5>
     </div>
-    <div class="col-3">
-      <a style="cursor: pointer" [href]="domain" target="_blank"><button *ngIf="!deleteconfrimshow && !deleterequestshow" class="previewsubmitbuttons" id="previewbutton">Preview Venue</button></a>
-    </div>
     <div *ngIf="suitsadmin" class="col-2">
-      <button (click)="showdeleteconfrim()" *ngIf="!deleteconfrimshow && suitsadmin" class="btn-danger">Delete Venue</button>
+      <button (click)="showdeleteconfrim()" *ngIf="!deleteconfrimshow && suitsadmin" class="btn btn-danger">Delete Venue</button>
       <div *ngIf="deleteconfrimshow" class="text-center">
         <h5>Are you sure you want to delete this Venue?</h5>
         <br>
