--- a/src/app/venueadmin/parentadminview/venueadminparentview/venueprofile/venueshowphotos/venueshowphotos.component.scss
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venueprofile/venueshowphotos/venueshowphotos.component.scss
@@ -1,6 +1,8 @@
 
 .imagecontainer{
   background-size: cover;
+  margin-left: 2px;
+  margin-right: 2px;
   margin-bottom: 30px;
   // margin-right: 1px;
   padding: 10px 10px 10px 10px;
