--- a/src/app/mainroot/footer/footer.component.html
+++ b/src/app/mainroot/footer/footer.component.html
@@ -22,6 +22,7 @@
           <li><a routerLink="/privacy">Privacy</a></li>
           <li><a routerLink="/terms">Terms</a></li>
           <li><a routerLink="">Contact Us</a></li>
+          <li><a routerLink="/how-it-works">How It Works</a></li>
         </ul>
       </div>
     </div>
