--- a/src/app/venueadmin/parentadminview/venueadminpage/venueadminpage.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminpage/venueadminpage.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class='col-2 float-right'>
-      <a (click)="showaddvenue()" id="addvenue"><h5>+Add Venue</h5></a>
+    <div class='col-4 float-right'>
+      <a data-toggle="modal" data-target="#venueSignup" id="addvenue"><h5>Request To Add Venue</h5></a>
     </div>
   </div>
   <div class="row text-center">
@@ -13,180 +13,198 @@
                [ngStyle]="{'background-image': 'url(' + venue.venue.venueimage_set[0].imageurl + ')'}">
           </div>
         </div>
-        <div class="row text-center">
-          <div class="col-auto">
-            <h5>Status:</h5>
-          </div>
-          <div class="col-auto">
-            <h5 *ngIf="venue.venue.active" style="font-style: italic; color: green">Public</h5>
-            <h5 *ngIf="!venue.venue.active" style="font-style: italic; color:red"><strong>Hidden</strong></h5>
+        <div class="row">
+          <div class="col-12 text-center">
+            <div class="col-auto text-center">
+              <h5>Status:</h5>
+              <h5 *ngIf="venue.venue.online" style="font-style: italic; color: green">Public</h5>
+              <h5 *ngIf="!venue.venue.online" style="font-style: italic; color:red"><strong>Hidden</strong></h5>
+            </div>
+            <div class="col-12 text-center">
+              <h5 *ngIf="venue.isvenueviewer">Viewer Permission</h5>
+              <h5 *ngIf="venue.isvenueeventplanner">Event Planner Permission</h5>
+              <h5 *ngIf="venue.isvenueadministrator">Administrator Permission</h5>
+            </div>
           </div>
         </div>
       </a>
     </div> <!--venue contatiner-->
+  </div>
+</div>
 
-    <div *ngIf="addvenueshow" class="col-md-6 venuemodal text-center">
-      <div *ngIf="!addrequestsucess">
-        <h4>New Venue Application</h4>
-        <form (ngSubmit)="addvenue()" #addvenueform="ngForm">
-          <div>
-            <label>Venue Name</label>
+<div class="modal fade" id="venueSignup" tabindex="-1" role="dialog" aria-labelledby="Venue-SignUp" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Venue Sign Up Request</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div *ngIf="signupcompelete" class="modal-body">
+        <h3>Your Venue application has been received we will be in touch</h3>
+      </div>
+      <div *ngIf="!signupcompelete" class="modal-body">
+        <form (ngSubmit)="addvenue(createvenueform)" #createvenueform="ngForm">
+          <div class="form-group">
+            <label for="inputVenueName" class="col-form-label">Venue Name:</label>
             <input type="text"
-                   id="venuenameinput"
-                   name="venuenameinput"
-                   ngModel>
+                   class="form-control"
+                   id="inputVenueName"
+                   name="venuename"
+                   ngModel
+                   required
+            ><span class="STredstar">*</span>
           </div>
-          <div>
-            <label>Street Address</label>
-            <input type="text"
-                   id="streetaddress1input"
-                   name="streetaddress1input"
-                   ngModel>
-          </div>
-          <div>
-            <label>Street Address</label>
-            <input type="text"
-                   id="streetaddress2input"
-                   name="streetaddress2input"
-                   ngModel>
-          </div>
+
           <div class="row">
-            <div class="col-md-6">
-              <label>City</label>
+            <div class="form-group col-md-6">
+              <label for="inputAddress" class="col-form-label">Address 1:</label>
               <input type="text"
-                     id="cityinput"
-                     name="cityinput"
-                     ngModel>
+                     class="form-control"
+                     name="venueaddress1"
+                     ngModel
+                     id="inputAddress"
+                     required><span class="STredstar">*</span>
             </div>
-            <div class="col-md-6">
-              <label>State</label>
+
+            <div class="form-group col-md-6">
+              <label for="inputAddress2" class="col-form-label">Address 2:</label>
               <input type="text"
-                     id="stateinput"
-                     name="stateinput"
-                     ngModel>
+                     class="form-control"
+                     name="venueaddress2"
+                     ngModel
+                     id="inputAddress2">
             </div>
           </div>
 
-          <div>
-            <label>Zip Code</label>
-            <input type="text"
-                   id="zipcodeinput"
-                   name="zipcodeinput"
-                   ngModel>
-          </div>
-          <div>
-            <label>Phone Number</label>
-            <input type="text"
-                   id="phonenumberinput"
-                   name="phonenumberinput"
-                   ngModel>
-          </div>
-          <div>
-            <label>Contact Name</label>
-            <input type="text"
-                   id="contactnameinput"
-                   name="contactnameinput"
-                   ngModel>
-          </div>
-          <div>
-            <label>Job Title</label>
-            <input type="text"
-                   id="jobtitleinput"
-                   name="jobtitleinput"
-                   ngModel>
-          </div>
-          <div>
-            <label>Contact Email</label>
-            <input type="email"
-                   id="emailinput"
-                   name="emailinput"
-                   ngModel>
-          </div>
-          <div class="row text-center">
-            <strong>Is this an Experiential Venue or Eatery?</strong>
-          </div>
-          <div class="row text-center">
-            <div class="col-md-6">
-              <label>Experiential Venue</label>
-              <br>
-              <input (change)="experientialorcuisinechoose()"
-                     type="radio"
-                     id="experientialtyperadio"
-                     name="venuetype"
-                     value="experiential"
-                     ngModel>
+          <div class="row">
+            <div class="form-group col-md-6">
+              <label for="inputCity" class="col-form-label">City:</label>
+              <input type="text"
+                     name="city"
+                     ngModel
+                     class="form-control"
+                     id="inputCity"
+                     required
+              ><span class="STredstar">*</span>
             </div>
-            <div class="col-md-6">
-              <label>Eatery</label>
-              <br>
-              <input (change)="experientialorcuisinechoose()"
-                     type="radio"
-                     id="eaterytyperadio"
-                     name="venuetype"
-                     value="eatery"
-                     ngModel>
-            </div>
-            <div *ngIf="showexperiential" class="row">
-              <label>Select Experiential Type</label>
-              <br>
-              <select id="experientialtypeselect"
-                      name="experientialtypeselect"
+
+            <div class="form-group col-md-4">
+              <label for="inputState" class="col-form-label">State:</label>
+              <select id="inputState"
+                      class="form-control"
+                      name="venuestateselect"
+                      required
                       ngModel>
-                <option value="">It goes here</option>
-              </select>
+                <option value="">Choose</option>
+                <option value="AL">AL</option>
+                <option value="AK">AK</option>
+                <option value="AZ">AZ</option>
+                <option value="AR">AR</option>
+                <option value="CA">CA</option>
+                <option value="CO">CO</option>
+                <option value="CT">CT</option>
+                <option value="DE">DE</option>
+                <option value="FL">FL</option>
+                <option value="GA">GA</option>
+                <option value="HI">HI</option>
+                <option value="ID">ID</option>
+                <option value="IL">IL</option>
+                <option value="IN">IN</option>
+                <option value="IA">IA</option>
+                <option value="KS">KS</option>
+                <option value="KY">KY</option>
+                <option value="LA">LA</option>
+                <option value="ME">ME</option>
+                <option value="MD">MD</option>
+                <option value="MA">MA</option>
+                <option value="MI">MI</option>
+                <option value="MN">MN</option>
+                <option value="MS">MS</option>
+                <option value="MO">MO</option>
+                <option value="MT">MT</option>
+                <option value="NE">NE</option>
+                <option value="NV">NV</option>
+                <option value="NH">NH</option>
+                <option value="NJ">NJ</option>
+                <option value="NM">NM</option>
+                <option value="NY">NY</option>
+                <option value="NC">NC</option>
+                <option value="ND">ND</option>
+                <option value="OH">OH</option>
+                <option value="OK">OK</option>
+                <option value="OR">OR</option>
+                <option value="PA">PA</option>
+                <option value="RI">RI</option>
+                <option value="SC">SC</option>
+                <option value="SD">SD</option>
+                <option value="TN">TN</option>
+                <option value="TX">TX</option>
+                <option value="UT">UT</option>
+                <option value="VT">VT</option>
+                <option value="VA">VA</option>
+                <option value="WA">WA</option>
+                <option value="WV">WV</option>
+                <option value="WI">WI</option>
+                <option value="WY">WY</option>
+              </select><span class="STredstar">*</span>
             </div>
-            <div *ngIf="showcuisine" class="row">
-              <div class="col-md-12">
-                <strong>Select At Least One Cuisine</strong>
-              </div>
-              <div class="col-md-6">
-                <label>Cuisine</label>
-                <br>
-                <select (click)="cuisinechange()"
-                        id="cuisine1select"
-                        name="cuisine1select"
-                        ngModel>
-                  <option value="">Popcorn</option>
-                  <option value="2">Its working</option>
-                </select>
-              </div>
-              <div class="col-md-6">
-                <label>Cuisine</label>
-                <br>
-                <div>
-                  <h5 *ngIf="!showsecondcuisine">Select a primary cuisine first.</h5>
-                </div>
-                <div *ngIf="showsecondcuisine">
-                  <select id="cuisine2select"
-                          name="cuisine2select"
-                          ngModel>
-                    <option value="">Popcorn</option>
-                  </select>
-                </div>
+          </div>
 
-              </div>
+          <div class="row">
+            <div class="form-group col-md-6">
+              <label for="inputContactName" class="col-form-label">Contact Name:</label>
+              <input type="text"
+                     class="form-control"
+                     name="venuecontactname"
+                     ngModel
+                     id="inputContactName"
+                     required><span class="STredstar">*</span>
             </div>
 
-            <div class="row">
-              <br>
-              <div>
-                <button (click)="closeaddvenue()" class="btn-danger">Cancel</button>
-                <button type="submit"  class="STButton">Add Venue</button>
-              </div>
+            <div class="form-group col-md-6">
+              <label for="inputPhone" class="col-form-label">Phone Number (Digits Only):</label>
+              <input type="number"
+                     class="form-control"
+                     id="inputPhone"
+                     name="venuephone"
+                     pattern="([0-9]{10})"
+                     ngModel
+                     #PhoneCSS = "ngModel"
+                     required
+              ><span class="STredstar">*</span>
+              <span *ngIf="PhoneCSS.touched && !PhoneCSS.valid" style="color: red">Phone Number Must be in 10 digits form. </span>
             </div>
+          </div>
+
+          <div class="row">
+            <div class="form-group col-md-6">
+              <label for="inputJobTitle" class="col-form-label">Job Title:</label>
+              <input type="text"
+                     class="form-control"
+                     name="venuejobtitle"
+                     ngModel
+                     id="inputJobTitle">
+            </div>
+
+            <div class="form-group col-md-6">
+              <label for="inputEmail" class="col-form-label">Contact Email:</label>
+              <input type="email"
+                     class="form-control"
+                     id="inputEmail"
+                     name="venueemail"
+                     ngModel
+                     required><span class="STredstar">*</span>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button [disabled]="!createvenueform.valid" type="submit" class="btn btn-primary">Sign Up</button>
+            <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
           </div>
         </form>
       </div>
-
-      <div *ngIf="addrequestsucess" class="col-md-12 text-center">
-        <h4>Your venue add request has been received.<br>
-          We will be in contact shortly</h4>
-        <button (click)="closeaddvenue()" class="STButton">Got It</button>
-      </div>
-
     </div>
-
-
-
   </div>
 </div>
+
