--- a/src/app/venueadmin/parentadminview/venueadminparentview/venueadminroomroot/venueadminroomlist/venueadminroomlist.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venueadminroomroot/venueadminroomlist/venueadminroomlist.component.html
@@ -100,13 +100,13 @@
           </div>
           <hr>
           <div *ngIf="roomactiveindex != i" class="text-center">
-            <button class="btn-danger" (click)="deleteroomconfirm(i)" >Delete</button>
+            <button class=" btn btn-danger" (click)="deleteroomconfirm(i)" >Delete</button>
           </div>
           <div *ngIf="roomactiveindex === i" class="text-center">
             <h4>Sure you want to delete this room?</h4>
             <br>
-            <button (click)="canceldelete()" class="STButton">Cancel</button>
-            <button (click)="deleteroom(i)"  class="btn-danger">Delete</button>
+            <button (click)="canceldelete()" class="btn STButton">Cancel</button>
+            <button (click)="deleteroom(i)"  class="btn btn-danger">Delete</button>
           </div>
           <br>
 
