completed contactus page.....again

--- a/src/app/mainroot/footer/footer.component.html
+++ b/src/app/mainroot/footer/footer.component.html
@@ -21,7 +21,7 @@
           <li><a routerLink="/partner">Partner With Us</a></li>
           <li><a routerLink="/privacy">Privacy</a></li>
           <li><a routerLink="/terms">Terms</a></li>
-          <li><a routerLink="">Contact Us</a></li>
+          <li><a routerLink="/contact">Contact Us</a></li>
           <li><a routerLink="/how-it-works">How It Works</a></li>
         </ul>
       </div>
