--- a/src/app/mainroot/contactus/contactus.component.html
+++ b/src/app/mainroot/contactus/contactus.component.html
@@ -28,7 +28,7 @@
       <div class="text-center bottomcontent content">
         <h2>Have a venue to list?</h2>
         <br>
-        <button class="btn btn-outline-primary applybutton"><h4>Apply</h4></button>
+        <button class="btn btn-outline-primary applybutton"  data-toggle="modal" data-target="#Venue-SignUp"><h4>Apply</h4></button>
       </div>
     </div>
 
