--- a/src/app/mainroot/navbar/navbar.component.scss
+++ b/src/app/mainroot/navbar/navbar.component.scss
@@ -5,6 +5,20 @@ a{
   height: 10%;
 }
 
+.hiwitem{
+  background-color: #00688B;
+  width: 10vw;
+  cursor: pointer;
+
+}
+.hiwbutton{
+  position: relative;
+  top: 20%;
+  left: 15%;
+  color: white
+
+}
+
 .check-input{
   margin-left: 0;
 }
